# raffles

./: .env.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
api/: .env.example  Cargo.toml  Dockerfile.dev  php.ini  supervisord.conf
api/app/Http/Controllers/: AuthController.php
api/app/Http/Middleware/: ForceJson.php
api/app/Http/Requests/: CreateAccountRequest.php  LogInRequest.php  SignInRequest.php  SignUpRequest.php
api/app/Models/: Brand.php  Colorway.php  Model.php  Raffle.php  Sneaker.php  Store.php  User.php
api/app/Traits/: Uuids.php
api/config/: app.php
api/database/migrations/: 3_create_stores_table.php  4_create_raffles_table.php  5_create_colorways_table.php  5_create_sneakers_table.php  6_create_models_table.php  7_create_sneakers_table.php  8_create_raffles_table.php
api/database/seeders/: BrandSeeder.php  ColorwaySeeder.php  DatabaseSeeder.php  ModelSeeder.php  RaffleSeeder.php  SneakerSeeder.php  StoreSeeder.php  UserSeeder.php
api/migrations/: 20220427101753_create_users_table.sql
api/routes/: api.php
api/src/: config.rs  main.rs
api/src/http/: error.rs  mod.rs
api/src/http/controllers/: users.rs
api/src/http/models/: user.rs
scraper/: Dockerfile.dev  config.json  database.py  main.py  process.py  utils.py
scraper/src/: data.json  database.py  main.py  process.py  utils.py
web/: Dockerfile.dev  package.json
web/app/: types.ts
web/components/: Layout.tsx  Logo.tsx
web/pages/: 404.tsx  _app.tsx  contact.tsx  faq.tsx  index.tsx  log-in.tsx  raffles.tsx  sign-up.tsx
web/utils/: navItems.ts  (+1 more)
(+20 files in other folders)
