[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.136", features = ["derive"] }
axum = { version = "0.5.3", features = ["tower-log"] }
sqlx = { git = "https://github.com/launchbadge/sqlx", rev = "826e63f", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono" ] }

# Axum builds on the types in tower
tower = "0.4.12"
tower-http = { version = "0.3.0", features = ["trace", "cors"] }

# Column types for SQLx
uuid = { version = "1.0.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }

# Utility crates
anyhow = "1.0.57"
dotenv = "0.15.0"
envy = "0.4.2"
log = "0.4.16"
env_logger = "0.9.0"
argon2 = "0.4.0"
rand = "0.8.5"